Adding docz data

--- a/docs/BasicExample.mdx
+++ b/docs/BasicExample.mdx
@@ -1,11 +1,14 @@
 ---
 name: Basic example
 route: /basic
+menu: Examples
 ---
 
 # Basic example
 
-Here is a very simple example:
+Here is a very simple example.
+
+You can select text and hit "Enter" to create a new annotation.
 
 import { Playground, Props } from "docz";
 import { Annotator } from "../src/index.tsx";
