--- a/docs/1-hello-world.mdx
+++ b/docs/1-hello-world.mdx
@@ -1,14 +1,15 @@
 ---
-name: Basic example
-route: /basic
+name: 1. Hello world
+route: /hello-world
 menu: Examples
 ---
 
-# Basic example
+# Hello world
 
 Here is a very simple example.
 
-You can select text and hit "Enter" to create a new annotation.
+- Select text and hit "Enter" to create a new annotation.
+- Right click on an annotation to view its contextual menu.
 
 import { Playground, Props } from "docz";
 import { Annotator } from "../src/index.tsx";
