--- a/docs/2-basic-example.mdx
+++ b/docs/2-basic-example.mdx
@@ -1,12 +1,18 @@
 ---
-name: Detailled example
-route: /detailled
+name: 2. Basic example
+route: /basic-example
 menu: Examples
+order: 1
 ---
 
-# Detailled example
+# Basic example
 
-Here is a more detailled example:
+Here is a real example.
+
+- Choose which annotation / relation to use from the legend at the top.
+- With annotations, select text and hit "Enter" to create a new one.
+- With relations, select the "from" text and hit "Enter", then do the same for the "to" text to create a new one.
+- Right click on an annotation or relation to view its contextual menu.
 
 import { Playground, Props } from "docz";
 import { Annotator } from "../src/index.tsx";
