--- a/docs/Props.mdx
+++ b/docs/Props.mdx
@@ -11,6 +11,11 @@ import { Annotator } from "../src/index.tsx";
 import {
   AnnotationsByKeyDummyComp,
   AnnotationValueDummyComp,
+  RelationsByKeyDummyComp,
+  RelationValueDummyComp,
+  AnnotationOperationDummyComp,
+  RelationOperationDummyComp,
+  UIOptionsDummyComp,
 } from "./Props.tsx";
 
 <Props of={Annotator} />
@@ -22,3 +27,23 @@ AnnotationsByKey:
 AnnotationValue:
 
 <Props of={AnnotationValueDummyComp} />
+
+RelationsByKey:
+
+<Props of={RelationsByKeyDummyComp} />
+
+RelationValue:
+
+<Props of={RelationValueDummyComp} />
+
+AnnotationOperation:
+
+<Props of={AnnotationOperationDummyComp} />
+
+RelationOperation:
+
+<Props of={RelationOperationDummyComp} />
+
+UIOptions:
+
+<Props of={UIOptionsDummyComp} />
